bug: issue when build image in docker on Ubuntu

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,4 +4,5 @@ ARG FRONTEND_API_URL
 WORKDIR /usr/share/nginx/html
 COPY . .
 COPY default.conf /etc/nginx/conf.d/
+RUN chmod 777 ./generate_config.sh
 RUN ./generate_config.sh
